--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="50sp"
                 android:layout_marginBottom="7sp"
-                android:text="Bem vindo à"
+                android:text="@string/recepcao"
                 android:textSize="20sp"
                 android:layout_marginTop="90sp"
                 android:textColor="#79000000"
@@ -46,7 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="5sp"
-                    android:text="C"
+                    android:text="@string/c"
                     android:textSize="35sp"
                     android:textColor="@color/primary"
                     android:textStyle="bold"/>
@@ -55,7 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginRight="2sp"
-                    android:text="P"
+                    android:text="@string/p"
                     android:textSize="35sp"
                     android:textColor="@color/primary"
                     android:textStyle="bold"/>
@@ -63,7 +63,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="A"
+                    android:text="@string/a"
                     android:textSize="35sp"
                     android:textColor="@color/primary"
                     android:textStyle="bold"/>
