--- a/app/src/main/res/layout/activity_register_common.xml
+++ b/app/src/main/res/layout/activity_register_common.xml
@@ -37,7 +37,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="Cadastro"
+                android:text="@string/cadastro"
                 android:textColor="#DDFFFFFF"
                 android:textSize="30dp"
                 android:layout_marginTop="3.5dp"
@@ -83,7 +83,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="Nome completo"
+                        android:hint="@string/nomeCompleto"
                         android:fontFamily="@font/montserrat_light"
                         android:id="@+id/edt_name"
                         />
@@ -114,7 +114,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="Email"
+                        android:hint="@string/email"
                         android:fontFamily="@font/montserrat_light"
                         android:id="@+id/edt_email"
                         />
@@ -145,7 +145,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="Data de nascimento"
+                        android:hint="@string/dataNascimento"
                         android:fontFamily="@font/montserrat_light"
                         android:inputType="date"
                         android:id="@+id/edt_birthday"
@@ -177,7 +177,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="N° Celular"
+                        android:hint="@string/celular"
                         android:fontFamily="@font/montserrat_light"
                         android:inputType="phone"
                         android:id="@+id/edt_phone"
@@ -209,7 +209,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="CPF"
+                        android:hint="@string/cpf"
                         android:fontFamily="@font/montserrat_light"
                         android:inputType="numberSigned"
                         android:id="@+id/edt_cpf"
@@ -240,7 +240,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="Senha"
+                        android:hint="@string/senha"
                         android:fontFamily="@font/montserrat_light"
                         android:id="@+id/edt_password"
                         />
@@ -271,7 +271,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="Confirmar senha"
+                        android:hint="@string/confirmaSenha"
                         android:fontFamily="@font/montserrat_light"
                         android:id="@+id/edt_confirm_password"
                         />
@@ -291,7 +291,7 @@
                 android:layout_width="170dp"
                 android:layout_height="45dp"
                 android:background="@drawable/rounded_rectangle"
-                android:text="Cancelar"
+                android:text="@string/cancelar"
                 android:onClick="telaInicial"/>
 
             <Button
@@ -299,7 +299,7 @@
                 android:layout_width="170dp"
                 android:layout_height="45dp"
                 android:background="@drawable/rounded_rectangle"
-                android:text="Finalizar"
+                android:text="@string/finalizar"
                 android:layout_marginLeft="10dp"
                 android:onClick="registerSucess"
                 />
