--- a/app/src/main/res/layout/activity_register_sucess.xml
+++ b/app/src/main/res/layout/activity_register_sucess.xml
@@ -30,7 +30,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="5sp"
-                android:text="C"
+                android:text="@string/c"
                 android:textColor="@color/primary"
                 android:textSize="35sp"
                 android:textStyle="bold" />
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginRight="2sp"
-                android:text="P"
+                android:text="@string/p"
                 android:textColor="@color/primary"
                 android:textSize="35sp"
                 android:textStyle="bold" />
@@ -47,7 +47,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="A"
+                android:text="@string/a"
                 android:textColor="@color/primary"
                 android:textSize="35sp"
                 android:textStyle="bold" />
@@ -56,7 +56,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cadastro realizado com sucesso!!"
+            android:text="@string/cadastroSucesso"
             android:layout_marginBottom="30dp"
             android:background="@android:color/transparent"/>
 
@@ -73,7 +73,7 @@
             android:layout_marginTop="15sp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="Login"
+            android:text="@string/login"
             android:onClick="login"/>
 
     </LinearLayout>
