--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -9,7 +9,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#1A7ABD"
+        android:background="@color/primary"
         android:gravity="center"
         android:orientation="vertical"
         android:paddingTop="150dp">
@@ -41,7 +41,7 @@
             android:layout_height="70dp"
             android:layout_gravity="center"
             android:layout_marginBottom="200dp"
-            android:indeterminateTint="#0A6DB3"/>
+            android:indeterminateTint="@color/primary"/>
 
         <TextView
             android:layout_width="wrap_content"
