--- a/app/src/main/res/layout/activity_community_home.xml
+++ b/app/src/main/res/layout/activity_community_home.xml
@@ -4,130 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".communityHome">
+    tools:context=".CommunityHome">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:background="#2A8DD2"
-            android:gravity="center"
-            android:paddingTop="15dp"
-            >
 
-            <LinearLayout
-                android:layout_width="400dp"
-                android:layout_height="match_parent"
-                >
+    </FrameLayout>
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@mipmap/logocpa"
-                    android:layout_marginRight="5dp"
-                    android:layout_marginLeft="30dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/cpa"
-                    android:textColor="#fff"
-                    android:textSize="22dp"
-                    android:layout_marginRight="5dp"
-                    />
-                <LinearLayout
-                    android:layout_width="1dp"
-                    android:layout_height="35dp"
-                    android:background="#C3FFFFFF"
-                    android:layout_marginRight="5dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/inicio"
-                    android:textColor="#B5FFFFFF"
-                    android:textSize="17dp"
-                    android:layout_marginRight="170dp"/>
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:menu="@menu/bottom_navbar"
+        android:background="@color/primary"
+        >
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@mipmap/chat"/>
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
 
-
-            </LinearLayout>
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="680dp"
-            android:gravity="center"
-            android:orientation="vertical"
-            >
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/andamento"
-                />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/construcao"
-                android:textSize="30dp"
-                />
-
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:background="@drawable/rounded_rectangle_top"
-            android:layout_gravity="bottom"
-            android:backgroundTint="#2A8DD2"
-            android:gravity="center"
-            android:paddingBottom="12dp"
-            >
-
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/home"
-                android:layout_margin="20dp"
-                />
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/blog"
-                android:layout_margin="20dp"
-                />
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/prof"
-                android:layout_margin="20dp"
-                />
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/faq"
-                android:layout_margin="20dp"
-                />
-            <ImageView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                android:src="@mipmap/options"
-                android:layout_margin="20dp"
-                />
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
