--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal"
     tools:context=".Login">
 
     <LinearLayout
@@ -81,7 +82,7 @@
                 android:background="#F9F9F9"
                 android:paddingLeft="10dp"
                 android:textSize="15dp"
-                android:hint="@string/email"
+                android:hint="@string/lbl_email"
                 android:fontFamily="@font/montserrat_light"
                 android:id="@+id/edt_email"
                 />
@@ -112,7 +113,7 @@
                 android:background="#F9F9F9"
                 android:paddingLeft="10dp"
                 android:textSize="15dp"
-                android:hint="@string/senha"
+                android:hint="@string/lbl_password"
                 android:fontFamily="@font/montserrat_light"
                 android:id="@+id/edt_password"
                 />
@@ -125,15 +126,15 @@
             android:layout_marginTop="15sp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="@string/entrar"
+            android:text="@string/txt_signin"
             android:onClick="telaHome"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/naoTemConta"
+            android:text="@string/txt_doesnt_have_account"
             android:fontFamily="@font/montserrat"/>
 
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
