--- a/app/src/main/res/layout/activity_login_choice.xml
+++ b/app/src/main/res/layout/activity_login_choice.xml
@@ -37,7 +37,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/cadastro"
+                android:text="@string/txt_register"
                 android:textColor="#DDFFFFFF"
                 android:textSize="30dp"
                 android:layout_marginTop="3.5sp"
@@ -54,7 +54,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/tipoPerfil"
+                android:text="@string/txt_profile_type"
                 android:textSize="18dp"
                 android:layout_marginTop="40dp"
                 android:layout_marginBottom="20dp"
@@ -62,7 +62,7 @@
             <Button
                 android:layout_width="200dp"
                 android:layout_height="45dp"
-                android:text="@string/comum"
+                android:text="@string/txt_profile_type_common"
                 style="@style/OrangeButton"
                 android:layout_marginBottom="20dp"
                 android:background="@drawable/rounded_rectangle"
@@ -70,7 +70,7 @@
             <Button
                 android:layout_width="200dp"
                 android:layout_height="45dp"
-                android:text="@string/profissional"
+                android:text="@string/txt_profile_type_professional"
                 style="@style/BlueButton"
                 android:background="@drawable/rounded_rectangle"
                 android:onClick="cadastroProfissional"/>
@@ -79,7 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="15dp"
-                android:text="@string/temConta"
+                android:text="@string/txt_doesnt_have_account"
                 android:layout_marginTop="50dp"
                 android:fontFamily="@font/montserrat_light"/>
 
