--- a/app/src/main/res/layout/activity_register_common.xml
+++ b/app/src/main/res/layout/activity_register_common.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -37,7 +37,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="@string/cadastro"
+                android:text="@string/txt_register"
                 android:textColor="#DDFFFFFF"
                 android:textSize="30dp"
                 android:layout_marginTop="3.5dp"
@@ -83,7 +83,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="@string/nomeCompleto"
+                        android:hint="@string/lbl_full_name"
                         android:fontFamily="@font/montserrat_light"
                         android:id="@+id/edt_name"
                         />
@@ -114,7 +114,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="@string/email"
+                        android:hint="@string/lbl_email"
                         android:fontFamily="@font/montserrat_light"
                         android:id="@+id/edt_email"
                         />
@@ -145,7 +145,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="@string/dataNascimento"
+                        android:hint="@string/lbl_birthday"
                         android:fontFamily="@font/montserrat_light"
                         android:inputType="date"
                         android:id="@+id/edt_birthday"
@@ -177,7 +177,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="@string/celular"
+                        android:hint="@string/lbl_phone"
                         android:fontFamily="@font/montserrat_light"
                         android:inputType="phone"
                         android:id="@+id/edt_phone"
@@ -209,7 +209,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="@string/cpf"
+                        android:hint="@string/lbl_cpf"
                         android:fontFamily="@font/montserrat_light"
                         android:inputType="numberSigned"
                         android:id="@+id/edt_cpf"
@@ -240,7 +240,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="@string/senha"
+                        android:hint="@string/lbl_password"
                         android:fontFamily="@font/montserrat_light"
                         android:id="@+id/edt_password"
                         />
@@ -271,7 +271,7 @@
                         android:background="#F9F9F9"
                         android:paddingLeft="10dp"
                         android:textSize="15dp"
-                        android:hint="@string/confirmaSenha"
+                        android:hint="@string/lbl_confirm_password"
                         android:fontFamily="@font/montserrat_light"
                         android:id="@+id/edt_confirm_password"
                         />
@@ -291,7 +291,7 @@
                 android:layout_width="170dp"
                 android:layout_height="45dp"
                 android:background="@drawable/rounded_rectangle"
-                android:text="@string/cancelar"
+                android:text="@string/txt_cancel"
                 android:onClick="telaInicial"/>
 
             <Button
@@ -299,11 +299,11 @@
                 android:layout_width="170dp"
                 android:layout_height="45dp"
                 android:background="@drawable/rounded_rectangle"
-                android:text="@string/finalizar"
+                android:text="@string/txt_finish"
                 android:layout_marginLeft="10dp"
                 android:onClick="registerSucess"
                 />
         </LinearLayout>
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
