--- a/app/src/main/res/layout/activity_register_sucess.xml
+++ b/app/src/main/res/layout/activity_register_sucess.xml
@@ -56,7 +56,7 @@
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/cadastroSucesso"
+            android:text="@string/txt_register_sucess"
             android:layout_marginBottom="30dp"
             android:background="@android:color/transparent"/>
 
@@ -73,7 +73,7 @@
             android:layout_marginTop="15sp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/rounded_rectangle"
-            android:text="@string/login"
+            android:text="@string/txt_signin"
             android:onClick="login"/>
 
     </LinearLayout>
