--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,11 +2,6 @@
     <!-- Base application theme. -->
     <style name="Theme.CPAWeb" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
@@ -24,8 +19,8 @@
     </style>
 
     <style name="BlueButton">
-        <item name="android:textColor">#FFFFFF</item>
-        <item name="android:backgroundTint">#2A8DD2</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/primary</item>
         <item name="android:textSize">18dp</item>
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">45dp</item>
