--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -9,4 +9,24 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="OrangeButton">
+        <item name="android:textColor">#FFFFFF</item>
+        <item name="android:backgroundTint">#FFB24D</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:fontFamily">@font/montserrat_light</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="BlueButton">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:backgroundTint">@color/primary</item>
+        <item name="android:textSize">18dp</item>
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">45dp</item>
+        <item name="android:fontFamily">@font/montserrat_light</item>
+        <item name="textAllCaps">false</item>
+    </style>
 </resources>
