--- a/app/src/main/res/layout/res_frag_avaliacao_dialog.xml
+++ b/app/src/main/res/layout/res_frag_avaliacao_dialog.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/dialogContainer"
-    android:layout_width="500dp"
-    android:layout_height="500dp"
-    android:background="@color/white"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_margin="50dp"
+    app:layout_constraintCircleRadius="50dp"
+    android:background="@drawable/border_dialog"
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:src="@drawable/ic_launcher_background" />
+    <TextView
+        android:id="@+id/tt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="teste" />
 
-</LinearLayout>
+    <Button
+        android:layout_below="@+id/tt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Enviar" />
+
+</RelativeLayout>
