--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="secondary">#FFB24D</color>
     <color name="white">#F6F6F6</color>
     <color name="black_900">#121212</color>
-    <color name="black">#212121</color>
+    <color name="black">#1e1e1e</color>
+    <color name="black_500">#212121</color>
+    <color name="black_300">#3c3c3c</color>
+    <color name="black_100">#4d4d4d</color>
 </resources>
