--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,6 +20,15 @@
     <color name="white_300">#FAFAFA</color>
     <color name="white_100">#FCFCFC</color>
 
+    <color name="gray_900">#111</color>
+    <color name="gray_800">#333</color>
+    <color name="gray_700">#666</color>
+    <color name="gray_600">#999</color>
+    <color name="gray_500">#AAA</color>
+    <color name="gray_400">#BBB</color>
+    <color name="gray_300">#CCC</color>
+    <color name="gray_200">#DDD</color>
+    <color name="gray_100">#EEE</color>
 
     <color name="black_900">#121212</color>
     <color name="black">#212121</color>
