--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -11,4 +11,11 @@
         android:layout_height="match_parent"
         android:text="PROFILE" />
 
+    <Button
+        android:id="@+id/btn_exit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/txt_exit"
+        />
+
 </FrameLayout>
