--- a/app/src/main/res/layout/places_list_item.xml
+++ b/app/src/main/res/layout/places_list_item.xml
@@ -2,6 +2,8 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginBottom="10dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
@@ -15,7 +17,7 @@
         app:cardCornerRadius="20dp"
         app:cardElevation="4dp"
         android:orientation="horizontal"
-        android:background="#D9D9D9"
+        android:background="@color/white_900"
         android:padding="5dp"
         >
 
