--- a/app/src/main/res/layout/professional_list_item.xml
+++ b/app/src/main/res/layout/professional_list_item.xml
@@ -5,17 +5,18 @@
     android:layout_gravity="center_horizontal"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_marginHorizontal="5dp"
+    android:layout_marginBottom="10dp"
     >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_margin="5dp"
         app:cardCornerRadius="5dp"
         app:cardElevation="4dp"
         android:orientation="horizontal"
-        android:background="@color/white"
+        android:background="@color/white_900"
         >
 
         <ImageView
