--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -3,52 +3,47 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardCornerRadius="2dp"
+    app:cardCornerRadius="10dp"
     app:cardElevation="3dp"
-    app:cardUseCompatPadding="true">
+    app:cardUseCompatPadding="true"
+    android:background="#F3F3F3"
+    >
     
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/linear_layout"
-        android:orientation="vertical">
+        android:id="@+id/linearLayout"
+        android:orientation="vertical"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        >
         
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="80dp"
             android:id="@+id/code_name"
             android:text="Code name"
-            android:textSize="22dp"
-            android:paddingRight="10dp"
-            android:textColor="@color/primary"/>
+            android:textSize="18dp"
+            android:fontFamily="@font/montserrat"
+            android:textColor="@color/black_500"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/expandable_layout"
+            android:visibility="visible"
             >
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:id="@+id/version"
-                android:text="Version"
-                android:padding="10dp"
-                android:textSize="18dp"
-                android:textStyle="bold"
-                android:textColor="@color/black_900"
-                />
-
-            <TextView
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/api_level"
-                android:text="Api level"
+                android:layout_height="0dp"
                 android:padding="10dp"
-                android:textSize="18dp"
-                android:layout_alignParentRight="true"
-                android:textStyle="bold"
+                android:text="Version"
                 android:textColor="@color/black_900"
-                />
+                android:textSize="18dp"
+                android:fontFamily="@font/montserrat_light"/>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -56,9 +51,10 @@
                 android:id="@+id/description"
                 android:text="Descrição"
                 android:padding="10dp"
-                android:textSize="18dp"
+                android:textSize="16dp"
                 android:layout_below="@+id/version"
                 android:textColor="@color/black_900"
+                android:fontFamily="@font/montserrat_light"
                 />
 
         </RelativeLayout>
