--- a/app/src/main/res/layout/fragment_query_history.xml
+++ b/app/src/main/res/layout/fragment_query_history.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".QueryHistory">
+    tools:context=".fragments.QueryHistoryFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
