--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,15 +3,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Settings">
+    tools:context=".fragments.SettingsFragment">
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:padding="20dp">
+        android:paddingHorizontal="20dp">
 
         <LinearLayout
+            android:id="@+id/container_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="70dp"
@@ -56,14 +57,14 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_below="@+id/container_profile"
             android:layout_width="match_parent"
-            android:layout_height="400dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingLeft="15dp"
             android:paddingTop="30dp">
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
@@ -88,7 +89,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="280dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0.7dp"
                     android:background="#000"
                     android:layout_marginTop="10dp"
@@ -97,7 +98,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
@@ -122,7 +123,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="280dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0.7dp"
                     android:background="#000"
                     android:layout_marginTop="10dp"
@@ -131,7 +132,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
@@ -156,16 +157,15 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="280dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0.7dp"
                     android:background="#000"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="10dp"/>
-
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
@@ -190,7 +190,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="280dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0.7dp"
                     android:background="#000"
                     android:layout_marginTop="10dp"
@@ -199,7 +199,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
@@ -224,7 +224,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="280dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0.7dp"
                     android:background="#000"
                     android:layout_marginTop="10dp"
@@ -233,7 +233,7 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
                 >
@@ -258,7 +258,7 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="280dp"
+                    android:layout_width="match_parent"
                     android:layout_height="0.7dp"
                     android:background="#000"
                     android:layout_marginTop="10dp"
@@ -268,6 +268,6 @@
 
             </LinearLayout>
 
-    </LinearLayout>
+    </RelativeLayout>
 
 </FrameLayout>
